<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".Tenant">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/rems"
        android:textStyle="bold"
        android:textColor="#000001"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:text="@string/number"
        android:layout_centerHorizontal="true"
        android:textColor="#000001"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="504dp"
        android:text="@string/ifregistered"
        android:textColor="#000001"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="285dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/t1"
        android:textColor="#000001"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:background="@drawable/round_edit"
        android:drawableLeft="@drawable/username"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/number"
        android:layout_width="314dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="304dp"
        android:background="@drawable/round_edit"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/num"
        android:layout_centerHorizontal="true"
        android:inputType="numberPassword" />


    <Button
        android:id="@+id/register"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="393dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:text="@string/presstoenter"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="593dp"
        android:background="@drawable/round_button"
        android:text="@string/button_login"
        android:textSize="20sp"
        android:textStyle="bold" />








</RelativeLayout>