<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".LandOwnerActv">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/rems"
        android:textStyle="bold"
        android:textColor="#000001"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:text="@string/number"
        android:layout_centerHorizontal="true"
        android:textColor="#000001"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="230dp"
        android:layout_centerHorizontal="true"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="374dp"
        android:text="@string/number_confirm"
        android:textColor="#000001"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="599dp"
        android:text="@string/ifregistered"
        android:textColor="#000001"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="285dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/t1"
        android:textColor="#000001"
        android:textSize="25sp"
        android:textStyle="bold" />



    <EditText
        android:id="@+id/name"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:background="@drawable/round_edit"
        android:drawableLeft="@drawable/username"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />



























</RelativeLayout>